reduce gap to avoid breaking grid

--- a/src/layouts/eventWeekLayout/EventWeekLayout.scss
+++ b/src/layouts/eventWeekLayout/EventWeekLayout.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(4, 1fr);
   z-index: 100;
-  gap: 0.5em; /* space between events */
+  gap: 0.3em; /* space between events */
   margin-top: 1.5em;
   white-space: nowrap;
   grid-auto-flow: dense;
